Updated CSS files to fix box alignment.

--- a/project-3_final-project/styles/idea-generator-style.css
+++ b/project-3_final-project/styles/idea-generator-style.css
@@ -2,7 +2,7 @@ body {
     background: linear-gradient(-65deg,#6ad1f7bd, #f7e96abb, #ff212187);
     background-size: 800% 800%;
     animation: gradient 15s ease infinite;
-    padding: 0;
+    padding: 30px 0 0 0;
     margin: 0;
 }
 
@@ -46,7 +46,7 @@ main {
     justify-self: center;
     align-self: center;
     width: 80%;
-    margin-top: 30px;
+    margin: 0 auto;
 }
 
 #main-container {
