--- a/project-3_final-project/styles/patterns-page-styles.css
+++ b/project-3_final-project/styles/patterns-page-styles.css
@@ -4,7 +4,7 @@ body {
   background-size: 800% 800%;
   animation: gradient 10s ease infinite;
   margin: 0;
-  padding: 0;
+  padding: 30px 0 0 0;
 }
 
 @keyframes gradient {
@@ -51,7 +51,7 @@ main {
     justify-self: center;
     align-self: center;
     width: 55%;
-    margin-top: 30px;
+    margin: 0 auto;
 }
 
 #main-container {
