--- a/project-3_final-project/styles/practicer-styles.css
+++ b/project-3_final-project/styles/practicer-styles.css
@@ -3,7 +3,7 @@ body {
   background-size: 800% 800%;
   animation: gradient 30s ease infinite;
   margin: 0;
-  padding: 0;
+  padding: 30px 0 0 0;
 }
 
 @keyframes gradient {
@@ -23,7 +23,7 @@ main {
     align-self: center;
     width: 70%;
     max-width: 1000px;
-    margin-top: 30px;
+    margin: 0 auto;
 }
 
 hr {
