--- a/project-3_final-project/styles/style.css
+++ b/project-3_final-project/styles/style.css
@@ -149,6 +149,7 @@ li {
   margin-right: -35px;
   margin-bottom: -40px;
   width: 350px;
+  max-height: 350px;
   aspect-ratio: .5;
   transition: .4s ease-in;
   background: #ffef97;
@@ -225,14 +226,14 @@ li {
 
 .thread {
   position: absolute;
-  offset-path: path('M200,-100 700, 120 C100,100 950,1200 200,200 S500,-50 700,200');
+  offset-path: path('M200,-100 500, 120 C100,100 950,1200 200,200 S400,-50 700,200');
   animation: moveAlongPath 10s infinite alternate ease-in-out;
   font-size: 30pt;
 }
 
 .scissors {
   position: absolute;
-  offset-path: path('M386 100.73 C103.422 289.62 587.759 371.05 868.527 396.289C1039.48 411.656 1186.1 519.094 1273.69 666.699C1328.32 763.63 1273.54 885.766 1164.82 909.429L1158.26 910.857L946.805 935.643C802.267 952.586 656.043 924.059 528.472 854.032L334.103 747.337C256.19 704.568 194.075 637.904 156.912 557.166L136.896 513.681C59.176 344.835 122.015 144.567 282.264 50.3889C345.985 12.9403 419.646 -4.09855 493.339 1.56375L1113.73 49.2324C1199.57 55.8276 1274.57 109.706 1308.23 188.943C1342.95 270.688 1327.61 365.109 1268.8 431.664L1078.75 646.765C970.576 769.194 815.993 840.613 652.649 843.627L429.683 847.742C226.044 851.5 58.941 687.453 58.941 483.779C58.941 274.365 235.196 108.132 444.251 120.377L529.737 125.385C674.484 133.863 805.884 212.746 881.42 336.511L951.804 451.834C1013.12 552.293 1133.64 599.883 1247.04 568.415L1276.44 560.257C1373.1 533.437 1440 445.444 1440 345.136C1440 208.094 1317.68 103.403 1182.28 124.564L1116.55 134.836C1099.17 137.553 1082.08 141.901 1065.51 147.823L657.568 293.636C577.217 322.356 505.283 370.632 448.256 434.106L340.945 553.549C221.832 686.129 225.012 888.102 348.239 1016.87');
+  offset-path: path('M386 100.73 C103.422 289.62 587.759 371.05 868.527 196.289C1039.48 231.656 1186.1 289.094 1273.69 666.699C1328.32 763.63 1273.54 885.766 1164.82 909.429L1158.26 910.857L946.805 935.643C802.267 952.586 656.043 924.059 528.472 854.032L334.103 747.337C256.19 704.568 194.075 637.904 156.912 557.166L136.896 513.681C59.176 344.835 122.015 144.567 282.264 50.3889C345.985 12.9403 419.646 -4.09855 493.339 1.56375L1113.73 49.2324C1199.57 55.8276 1274.57 109.706 1308.23 188.943C1342.95 270.688 1327.61 365.109 1268.8 431.664L1078.75 646.765C970.576 769.194 815.993 840.613 652.649 843.627L429.683 847.742C226.044 851.5 58.941 687.453 58.941 483.779C58.941 274.365 235.196 108.132 444.251 120.377L529.737 125.385C674.484 133.863 805.884 212.746 881.42 336.511L951.804 451.834C1013.12 552.293 1133.64 599.883 1247.04 568.415L1276.44 560.257C1373.1 533.437 1440 445.444 1440 345.136C1440 208.094 1317.68 103.403 1182.28 124.564L1116.55 134.836C1099.17 137.553 1082.08 141.901 1065.51 147.823L657.568 293.636C577.217 322.356 505.283 370.632 448.256 434.106L340.945 553.549C221.832 686.129 225.012 888.102 348.239 1016.87');
   animation: moveAlongPath 10s infinite alternate ease-in-out;
   font-size: 70pt;
 }
