--- a/project-3_final-project/styles/tasker-styles.css
+++ b/project-3_final-project/styles/tasker-styles.css
@@ -3,7 +3,7 @@ body {
   background-size: 800% 800%;
   animation: gradient 15s ease infinite;
   margin: 0;
-  padding: 0;
+  padding: 30px 0 0 0;
 }
 
 @keyframes gradient {
@@ -26,7 +26,7 @@ main {
     align-self: center;
     width: 80%;
     max-width: 1000px;
-    margin-top: 30px;
+    margin: 0 auto;
 }
 
 hr {
